<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myName"
            type="com.example.todoboom.MyName" />

        <variable
            name="adderViewModel"
            type="com.example.todoboom.todoadder.AdderViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/layout_padding"
        tools:context=".Ex1Activity">


        <TextView
            android:id="@+id/name_text"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/layout_padding"
            android:text="@={myName.name}"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/nickname_edit"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.301" />

        <EditText
            android:id="@+id/nickname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/what_is_your_nickname"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/done_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_text"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/nickname_view"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@={myName.nickname}"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/nickname_edit"
            app:layout_constraintEnd_toEndOf="@id/nickname_edit"
            app:layout_constraintStart_toStartOf="@id/nickname_edit"
            app:layout_constraintTop_toTopOf="@id/nickname_edit" />


        <EditText
            android:id="@+id/todo_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/what_is_your_next_todo"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/create_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/done_button" />

        <Button
            android:id="@+id/see_stats_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:visibility="visible"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/see_stats"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todos_list" />


        <Button
            android:id="@+id/done_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/done"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/todo_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nickname_edit" />

        <Button
            android:id="@+id/create_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/create_label"

            app:layout_constraintBottom_toTopOf="@+id/todos_list"
            app:layout_constraintEnd_toStartOf="@id/clear_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todo_input" />

        <Button
            android:id="@+id/clear_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:onClick="@{()->adderViewModel.onClear()}"
            android:text="@string/clear"
            app:layout_constraintBottom_toTopOf="@+id/todos_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/create_button"
            app:layout_constraintTop_toBottomOf="@+id/todo_input" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todos_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/see_stats_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_button"
            app:layout_constraintVertical_bias="0.0" />

        <!-- In the TextView, we can access the nightsString LiveData,
           which keeps it displayed and updated in the TextView
           whenever it changes. -->
        <!--        <TextView-->
        <!--            android:id="@+id/todos_view"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@{adderViewModel.todosString}" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>